Fixed issue where the drag-drop reorder of external subtitle files did not affect the final ordering.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1784,6 +1784,7 @@
 								VidCoderDragDrop:DragDropHelper.DragDropTemplate="{StaticResource SubtitleFileDragTemplate}"
 								VidCoderDragDrop:DragDropHelper.IsDragSource="True"
 								VidCoderDragDrop:DragDropHelper.IsDropTarget="True"
+								VidCoderDragDrop:DragDropHelper.SourceList="{Binding FileSubtitles}"
 								ItemContainerStyle="{StaticResource ListViewItemNoSelectionNoHoverStyle}"
 								ItemsSource="{Binding FileSubtitlesBindable}">
 								<i:Interaction.Behaviors>
