Changed to pass in the correct PixelsPerDip value when calculating text size. This should fix some issues with cut off file paths. Changed the watcher file path to use the PathTextBlock so it can intelligently resize based on the column width.

--- a/VidCoder/View/WatcherWindow.xaml
+++ b/VidCoder/View/WatcherWindow.xaml
@@ -299,7 +299,7 @@
 								<GridViewColumn Width="450" Header="{x:Static res:WatcherRes.PathColumnHeader}">
 									<GridViewColumn.CellTemplate>
 										<DataTemplate>
-											<TextBlock Style="{DynamicResource TextBlockBaseStyle}" Text="{Binding WatchedFile.Path}" />
+											<controls:PathTextBlock Foreground="{DynamicResource WindowTextBrush}" Text="{Binding WatchedFile.Path}" />
 										</DataTemplate>
 									</GridViewColumn.CellTemplate>
 								</GridViewColumn>
