--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -77,6 +77,7 @@
 				<Setter Property="FontSize" Value="14" />
 				<Setter Property="Margin" Value="0 0 0 6" />
 				<Setter Property="HorizontalAlignment" Value="Left" />
+				<Setter Property="TextWrapping" Value="Wrap" />
 			</Style>
 
 			<SolidColorBrush x:Key="DisabledBrush" Color="#4C4C4C" />
