Updated the preset resize hang fix to be more robust. We now ignore any preset drag move move event that happens shortly after the encoding window resizes.

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -15,6 +15,7 @@
 	MinHeight="467"
 	Closed="Window_Closed"
 	Closing="Window_Closing"
+	SizeChanged="Window_SizeChanged"
 	ShowInTaskbar="False"
 	Style="{StaticResource NormalWindow}"
 	TextOptions.TextFormattingMode="Display"
