Speculative fix for hang on dragging the encoding settings window.

--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -16,6 +16,7 @@
 	Closed="Window_Closed"
 	Closing="Window_Closing"
 	SizeChanged="Window_SizeChanged"
+	LocationChanged="Window_LocationChanged"
 	ShowInTaskbar="False"
 	Style="{StaticResource NormalWindow}"
 	TextOptions.TextFormattingMode="Display"
