--- a/VidCoder/Themes/Light.xaml
+++ b/VidCoder/Themes/Light.xaml
@@ -71,6 +71,11 @@
 	<SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
 
 
+	<SolidColorBrush x:Key="ListBox.Static.Background" Color="#FFFFFFFF" />
+	<SolidColorBrush x:Key="ListBox.Static.Border" Color="#FFABADB3" />
+	<SolidColorBrush x:Key="ListBox.Disabled.Background" Color="#FFFFFFFF" />
+	<SolidColorBrush x:Key="ListBox.Disabled.Border" Color="#FFD9D9D9" />
+
 
 	<SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD" />
 	<SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070" />
