--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -46,7 +46,8 @@
 				Grid.Row="0"
 				Grid.ColumnSpan="2"
 				Icon="/Icons/Options.png"
-				IsActive="{Binding IsActive, RelativeSource={RelativeSource AncestorType=Window}}" />
+				IsActive="{Binding IsActive,
+				                   RelativeSource={RelativeSource AncestorType=Window}}" />
 
 			<Grid
 				Grid.Row="1"
@@ -87,7 +88,9 @@
 						<StackPanel
 							VerticalAlignment="Top"
 							Orientation="Vertical"
-							Visibility="{Binding SelectedTabIndex, Converter={StaticResource IntVisibilityConverter}, ConverterParameter=0}">
+							Visibility="{Binding SelectedTabIndex,
+							                     Converter={StaticResource IntVisibilityConverter},
+							                     ConverterParameter=0}">
 
 							<!--  Encoding settings shortcut  -->
 							<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:OptionsRes.EncodingSettingsSection}" />
@@ -214,7 +217,8 @@
 										HorizontalAlignment="Left"
 										Content="{x:Static res:OptionsRes.UseSystemPlayer}"
 										GroupName="customVideo1"
-										IsChecked="{Binding UseCustomVideoPlayer, Converter={StaticResource InverseBoolConverter}}" />
+										IsChecked="{Binding UseCustomVideoPlayer,
+										                    Converter={StaticResource InverseBoolConverter}}" />
 									<Grid
 										Margin="20 6 0 0"
 										HorizontalAlignment="Stretch"
@@ -303,7 +307,8 @@
 									HorizontalAlignment="Left"
 									Content="{x:Static res:OptionsRes.MinimizeToTaskBarRadioButton}"
 									GroupName="minimize1"
-									IsChecked="{Binding MinimizeToTray, Converter={StaticResource InverseBoolConverter}}" />
+									IsChecked="{Binding MinimizeToTray,
+									                    Converter={StaticResource InverseBoolConverter}}" />
 								<RadioButton
 									HorizontalAlignment="Left"
 									Content="{x:Static res:OptionsRes.MinimizeToSystemTrayRadioButton}"
@@ -317,7 +322,9 @@
 						<StackPanel
 							VerticalAlignment="Top"
 							Orientation="Vertical"
-							Visibility="{Binding SelectedTabIndex, Converter={StaticResource IntVisibilityConverter}, ConverterParameter=1}">
+							Visibility="{Binding SelectedTabIndex,
+							                     Converter={StaticResource IntVisibilityConverter},
+							                     ConverterParameter=1}">
 							<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:OptionsRes.ProcessOptionsLabel}" />
 							<StackPanel Style="{StaticResource ConfigSectionStack}">
 								<CheckBox
@@ -337,7 +344,8 @@
 										Margin="6 0 0 0"
 										AutomationProperties.LabeledBy="{Binding ElementName=workerProcessPriorityLabel}"
 										ItemsSource="{Binding PriorityChoices}"
-										SelectedValue="{Binding WorkerProcessPriority, Mode=TwoWay}"
+										SelectedValue="{Binding WorkerProcessPriority,
+										                        Mode=TwoWay}"
 										SelectedValuePath="Value" />
 								</StackPanel>
 
@@ -358,7 +366,8 @@
 										AutomationProperties.LabeledBy="{Binding ElementName=maxSimultaneousEncodesLabel}"
 										Maximum="16"
 										Minimum="1"
-										Number="{Binding MaxSimultaneousEncodes, Mode=TwoWay}" />
+										Number="{Binding MaxSimultaneousEncodes,
+										                 Mode=TwoWay}" />
 								</StackPanel>
 
 								<CheckBox Margin="0 6 0 0" IsChecked="{Binding CapNVEnc}">
@@ -419,7 +428,8 @@
 										IsEnabled="{Binding AutoPauseLowDiskSpace}"
 										Minimum="1"
 										Modulus="1"
-										Number="{Binding AutoPauseLowDiskSpaceGb, Mode=TwoWay}"
+										Number="{Binding AutoPauseLowDiskSpaceGb,
+										                 Mode=TwoWay}"
 										ShowIncrementButtons="False" />
 
 									<TextBlock
@@ -428,11 +438,15 @@
 										Text="GB" />
 								</StackPanel>
 
-								<TextBlock Margin="0 6 0 0" Text="{x:Static res:OptionsRes.AutoPauseLabel}" />
+								<CheckBox
+									Margin="0 6 0 0"
+									Content="{x:Static res:OptionsRes.AutoPauseLabel}"
+									IsChecked="{Binding AutoPauseProcessesEnabled}" />
 								<ListBox
 									MinHeight="60"
-									Margin="0 0 0 0"
+									Margin="0 4 0 0"
 									Background="{DynamicResource WindowBrush}"
+									IsEnabled="{Binding AutoPauseProcessesEnabled}"
 									ItemsSource="{Binding AutoPauseProcesses}"
 									SelectedItem="{Binding SelectedProcess}" />
 								<StackPanel
@@ -463,7 +477,9 @@
 						<StackPanel
 							VerticalAlignment="Top"
 							Orientation="Vertical"
-							Visibility="{Binding SelectedTabIndex, Converter={StaticResource IntVisibilityConverter}, ConverterParameter=2}">
+							Visibility="{Binding SelectedTabIndex,
+							                     Converter={StaticResource IntVisibilityConverter},
+							                     ConverterParameter=2}">
 							<!--  Advanced options  -->
 							<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:OptionsRes.AdvancedOptionsSection}" />
 							<StackPanel Style="{StaticResource ConfigSectionStack}">
@@ -510,7 +526,8 @@
 										AutomationProperties.LabeledBy="{Binding ElementName=encodeRetriesLabel}"
 										Maximum="5"
 										Minimum="0"
-										Number="{Binding EncodeRetries, Mode=TwoWay}" />
+										Number="{Binding EncodeRetries,
+										                 Mode=TwoWay}" />
 								</StackPanel>
 								<StackPanel
 									Margin="0 6 0 0"
@@ -536,7 +553,9 @@
 									<StackPanel
 										Margin="10 0 0 0"
 										Orientation="Horizontal"
-										Visibility="{Binding WatcherMode, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter={x:Static commonModel:WatcherMode.Polling}}">
+										Visibility="{Binding WatcherMode,
+										                     Converter={StaticResource EnumVisibilityConverter},
+										                     ConverterParameter={x:Static commonModel:WatcherMode.Polling}}">
 										<TextBlock
 											Name="watcherPollIntervalLabel"
 											VerticalAlignment="Center"
@@ -548,7 +567,8 @@
 											AllowEmpty="False"
 											Maximum="3600"
 											Minimum="1"
-											Number="{Binding WatcherPollIntervalSeconds, Mode=TwoWay}" />
+											Number="{Binding WatcherPollIntervalSeconds,
+											                 Mode=TwoWay}" />
 									</StackPanel>
 
 								</StackPanel>
@@ -572,7 +592,8 @@
 										AllowEmpty="False"
 										AutomationProperties.LabeledBy="{Binding ElementName=minScanLengthLabel}"
 										Minimum="0"
-										Number="{Binding MinimumTitleLengthSeconds, Mode=TwoWay}" />
+										Number="{Binding MinimumTitleLengthSeconds,
+										                 Mode=TwoWay}" />
 								</StackPanel>
 								<StackPanel
 									Margin="0 6 0 0"
@@ -735,7 +756,9 @@
 						<StackPanel
 							VerticalAlignment="Top"
 							Orientation="Vertical"
-							Visibility="{Binding SelectedTabIndex, Converter={StaticResource IntVisibilityConverter}, ConverterParameter=3}">
+							Visibility="{Binding SelectedTabIndex,
+							                     Converter={StaticResource IntVisibilityConverter},
+							                     ConverterParameter=3}">
 
 							<!--  Updates  -->
 							<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:OptionsRes.UpdatesSection}" />
@@ -756,7 +779,8 @@
 										Margin="16 0 0 0"
 										VerticalAlignment="Center"
 										Text="{x:Static res:OptionsRes.UpdateModeLabel}"
-										Visibility="{Binding UpdatesEnabledConfig, Converter={StaticResource VisibilityConverter}}" />
+										Visibility="{Binding UpdatesEnabledConfig,
+										                     Converter={StaticResource VisibilityConverter}}" />
 									<ComboBox
 										Margin="6 0 0 0"
 										VerticalAlignment="Center"
@@ -765,7 +789,8 @@
 										ItemsSource="{Binding UpdateModeChoices}"
 										SelectedValue="{Binding UpdateMode}"
 										SelectedValuePath="Value"
-										Visibility="{Binding UpdatesEnabledConfig, Converter={StaticResource VisibilityConverter}}" />
+										Visibility="{Binding UpdatesEnabledConfig,
+										                     Converter={StaticResource VisibilityConverter}}" />
 								</StackPanel>
 
 								<Button
@@ -773,7 +798,8 @@
 									HorizontalAlignment="Left"
 									Command="{Binding CheckUpdate}"
 									Content="{x:Static res:OptionsRes.CheckNowButton}"
-									Visibility="{Binding SupportsUpdates, Converter={StaticResource VisibilityConverter}}" />
+									Visibility="{Binding SupportsUpdates,
+									                     Converter={StaticResource VisibilityConverter}}" />
 							</StackPanel>
 
 							<!--  Status  -->
@@ -790,14 +816,18 @@
 											Padding="10 4"
 											Command="{Binding ApplyUpdate}"
 											Content="{x:Static res:OptionsRes.ApplyUpdateButton}"
-											Visibility="{Binding Updater.State, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter={x:Static model:UpdateState.UpdateReady}}" />
+											Visibility="{Binding Updater.State,
+											                     Converter={StaticResource EnumVisibilityConverter},
+											                     ConverterParameter={x:Static model:UpdateState.UpdateReady}}" />
 									</StackPanel>
 									<ProgressBar
 										Grid.Column="1"
 										Height="20"
 										Margin="0 0 0 0"
-										Visibility="{Binding CheckingForUpdate, Converter={StaticResource VisibilityConverter}}"
-										Value="{Binding UpdateProgressPercent, Mode=OneWay}" />
+										Visibility="{Binding CheckingForUpdate,
+										                     Converter={StaticResource VisibilityConverter}}"
+										Value="{Binding UpdateProgressPercent,
+										                Mode=OneWay}" />
 								</StackPanel>
 							</StackPanel>
 
@@ -805,7 +835,8 @@
 							<TextBlock
 								Style="{StaticResource ConfigSectionHeader}"
 								Text="{x:Static res:OptionsRes.BetaSection}"
-								Visibility="{Binding BetaSectionVisible, Converter={StaticResource VisibilityConverter}}" />
+								Visibility="{Binding BetaSectionVisible,
+								                     Converter={StaticResource VisibilityConverter}}" />
 							<StackPanel Style="{StaticResource ConfigSectionStack}" Visibility="{Binding BetaSectionVisible, Converter={StaticResource VisibilityConverter}}">
 								<TextBlock TextWrapping="Wrap" Visibility="{Binding IsBeta, Source={x:Static vidCoder:XamlStatics.Instance}, Converter={StaticResource InverseVisibilityConverter}}">
 									<Hyperlink NavigateUri="{Binding BetaChangelogUrl}" RequestNavigate="Hyperlink_OnRequestNavigate">
@@ -815,11 +846,15 @@
 								<TextBlock
 									Text="{x:Static res:OptionsRes.BetaUpdatesNonBetaWarning}"
 									TextWrapping="Wrap"
-									Visibility="{Binding IsBeta, Source={x:Static vidCoder:XamlStatics.Instance}, Converter={StaticResource InverseVisibilityConverter}}" />
+									Visibility="{Binding IsBeta,
+									                     Source={x:Static vidCoder:XamlStatics.Instance},
+									                     Converter={StaticResource InverseVisibilityConverter}}" />
 								<TextBlock
 									Text="{x:Static res:OptionsRes.BetaUpdatesInBeta}"
 									TextWrapping="Wrap"
-									Visibility="{Binding IsBeta, Source={x:Static vidCoder:XamlStatics.Instance}, Converter={StaticResource VisibilityConverter}}" />
+									Visibility="{Binding IsBeta,
+									                     Source={x:Static vidCoder:XamlStatics.Instance},
+									                     Converter={StaticResource VisibilityConverter}}" />
 							</StackPanel>
 						</StackPanel>
 					</Grid>
