--- a/VidCoder/View/Panels/VideoFiltersPanel.xaml
+++ b/VidCoder/View/Panels/VideoFiltersPanel.xaml
@@ -67,6 +67,7 @@
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="Auto" />
@@ -563,6 +564,11 @@
 				HorizontalAlignment="Left"
 				Content="{x:Static res:EncodingRes.GrayscaleCheckBox}"
 				IsChecked="{Binding Grayscale}" />
+
+			<Button
+				Grid.Row="8"
+				Command="{Binding RefreshThing}"
+				Content="Refresh the thing" />
 		</Grid>
 	</Grid>
 </UserControl>
