Added option to stop showing the encode progress in the Window title. This allows working around a Windows bug where the Alt-Tab switcher flickers on window title updates.

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -512,6 +512,12 @@
 									VerticalAlignment="Center"
 									Content="{x:Static res:OptionsRes.TriggerWhenDoneWithFailedJobsCheckBox}"
 									IsChecked="{Binding TriggerEncodeCompleteActionWithErrors}" />
+								<CheckBox
+									Margin="0 6 0 0"
+									HorizontalAlignment="Left"
+									VerticalAlignment="Center"
+									Content="{x:Static res:OptionsRes.ShowProgressInWindowTitleCheckBox}"
+									IsChecked="{Binding ShowProgressInWindowTitle}" />
 								<StackPanel Margin="0 6 0 0" Orientation="Horizontal">
 									<TextBlock
 										Name="encodeRetriesLabel"
